# VerbafloResumeMaker

./: .gitignore  README.md  main.py  pyproject.toml  readme.md  requirements.txt
services/: process_pdf.py
static/: preview.css  styles.css
templates/: preview.html  upload.html
